# exchange-platform

./: .gitignore  API_SURFACE.md  ARCHITECTURE.md  Cargo.toml  Makefile  Plans.md  README.md  RUNBOOK.md  buf.gen.yaml  buf.yaml  build.gradle.kts  go.mod  go.sum  settings.gradle.kts
.run/: Edge Gateway (Go).run.xml  Infra Up (Compose).run.xml  Ledger Service (Spring Boot).run.xml  Streaming Flink Jobs (Gradle Test).run.xml  Trading Core (Cargo Test).run.xml  Web User (Vite).run.xml
assurance/: GSN.md
compliance/: mapping.yaml
contracts/: README.md
controls/: controls.yaml
policies/: trading-policy.v1.json
runbooks/: adversarial_reliability.md  adversarial_reliability.sh  audit_chain_tamper.md  audit_chain_tamper.sh  budget_failure.md  budget_failure.sh  change_workflow.md  change_workflow.sh  crash_recovery.md  crash_recovery.sh  exactly_once_million_failure.md  exactly_once_million_failure.sh  game_day_anomaly.md  game_day_anomaly.sh  idempotency_key_format_failure.md  idempotency_key_format_failure.sh  idempotency_latch_failure.md  idempotency_latch_failure.sh  lag_spike.md  lag_spike.sh  load_regression.md  load_regression.sh  mapping_coverage_failure.md  mapping_coverage_failure.sh  mapping_integrity_failure.md  mapping_integrity_failure.sh  network_partition.md  network_partition.sh  policy_signature.md  policy_signature.sh  policy_tamper.md  (+13 more)
services/trading-core/: Cargo.toml  build.rs
services/trading-core/src/: determinism.rs  engine.rs  kafka.rs  leader.rs  lib.rs  model.rs  orderbook.rs  outbox.rs  risk.rs  snapshot.rs  tests.rs  wal.rs
(+220 files in other folders)
